Add to MyList modal added, cannot save